# YU-capstone-25-26

./: .gitignore  LICENSE  README.md  capstone.py  fps_log.txt  reset.py  server.py  servo_ex.py  video_server.py
Tracking/arduino/IMU_and_BEND/: IMU_and_BEND.ino
Tracking/arduino/I_and_B_parse/: I_and_B_parse.ino
Tracking/arduino/bend_test/: bend_test.ino
Tracking/arduino/jodo_test/: jodo_test.ino
Tracking/arduino/new_servo/: new_servo.ino
Tracking/arduino/servo_multi_test/: servo_multi_test.ino
Tracking/arduino/sketch_IMU_module/: sketch_IMU_module.ino
arduino/: README.md
arduino/IMU_and_BEND/: IMU_and_BEND.ino  I_and_B_parse.ino
arduino/all_of_them/: all_of_them.ino
arduino/data_crc/: data_crc.ino
arduino/robotics1/: robotics1.ino
arduino/sketch_IMU_module/: sketch_IMU_module.ino
arm_rbt_mujoco/: arm_modeling.py  rrr.xml  viewer.py
docs/hwp/: ras사전준비.hwp  ras사전준비.md  임베디드-코드.hwp  임베디드-코드.md  코드-사용설명서.hwp  코드-사용설명서.md
python/: .arm2.py.swp  README.md  arm.py  arm_test.py  capstone.py  capstone1.py  capstone2.py  ex1.py  example.py  gateway.py  method_print.py  parse.py  parsing.py  picam2.py  pyproject.toml  read_servo.py  robot.py  robotics.py  robotics_gateway.py  robotics_gw.py  robotics_origin.py  setup.py  stream_server.py  test1.py  test2.py
rbt_arm_mujoco/: viewer_rrr.py
template/: index.html
templates/: index.html
